2004-06-28 00:41  Alexander Malmberg <alexander@malmberg.org>

	* Source/xlib/XGGState.m (-setWindowDevice:): Remove use of
	cast-as-lvalue.

2004-06-26 13:04  Alexander Malmberg <alexander@malmberg.org>

	* Source/x11/XGServerEvent.m (-processEvent: ConfigureNotify):
	Don't ignore the event for unmapped windows. Use XTranslateCoordinates
	to get the size and position right for both real and artificial
	events. Only update the position hints if we're mapped.

	* Source/x11/XGServerWindow.m: Add handlesWindowDecorations variable.
	(-handlesWindowDecorations): New method.
	(setWindowHintsForStyle, -styleoffsets:::::): If we aren't handling
	window decorations, treat all windows as borderless.
	(-stylewindow::, -setinputstate::): Assert that we're handling window
	decorations.
	(-window::::): Create the window structure earlier so it can be used
	to convert frames.
	(-_setupRootWindow): Set handlesWindowDecorations based on the
	GSX11HandlesWindowDecorations defaults value.

	* Documentation/Back/DefaultsSummary.gsdoc: Document
	GSX11HandlesWindowDecorations.

2004-06-19  Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m (-findWindowAt:windowRef:excluding:)
	New method for D&D. (-dragInfo), (-slideImage:from:to:) Removed.

2004-06-11  Adam Fedor  <fedor@gnu.org>

	* Version 0.9.3
	* Documentation/news.texi: Update.

	* configure.ac: Remove WindowMaker/libwraster check

2004-05-27  Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32ServerEvent.m (-windowEventProc:::) Added
	handling of size and move events and extracted end of resize event
	handling into the same new method. PAINT now always validates the
	whole window.
	Patch by MA Garcias <lists@tragnarion.com>.
	New method [-resizeBackingStoreFor:] used for end of resize events.

2004-05-13 17:11  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m (-advancementForGlyph:): Return a zero size for
	control glyphs.

	(-positionOfGlyph:precededByGlyph:isNominal:): Check if either glyph